--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
-  "name": "odyssey-socket",
-  "version": "0.1.0",
-  "private": true,
+  "name": "socket",
+  "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
-    "build": "next build && tsc --project tsconfig.server.json",
-    "start": "cross-env SET NODE_ENV=production & node dist/server.js",
+    "dev": "nodemon src/index.ts",
+    "build": "rimraf ./dist && tsc",
+    "start": "npm run build && node dist/index.js",
     "postinstall": ""
   },
   "dependencies": {
-    "cross-env": "^7.0.3",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "express": "^4.19.2",
+    "ts-node": "^10.9.2",
     "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "@types/ws": "^8.5.12",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
     "nodemon": "^3.1.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "rimraf": "^6.0.1",
+    "typescript": "^5.5.4"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
