adding new features

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-
-
-ACCESS_TOKEN=example//ertyuitsdgfghjgj
-
-PORT=3000
+PORT=3001
+ACCESS_TOKEN=g4rren-dansukdfrang
+POOL_TOKEN=g4rren-sdffg
+DATABASE_URL="postgresql://postgres:password@192.168.100.46:5432/postgres?schema=postgres"
