--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,11 @@
     "baseUrl": "./src",
     "target": "ES2020",
     "module": "NodeNext",
-    "outDir": "./dist",
+    "outDir": "./build",
     "moduleResolution": "NodeNext",
     // "strict": true,
     // "esModuleInterop": true
   },
-  "include": [ "src/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
