--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",
+    // "baseUrl": "./src",
     "target": "ES2020",
     "module": "NodeNext",
-    "outDir": "./build",
+    // "rootDir": "./src",
+    "outDir": "./dist",
     "moduleResolution": "NodeNext",
     // "strict": true,
     // "esModuleInterop": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist"]
 }
