--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,4 @@ services:
       PORT: 3001
       ACCESS_TOKEN: g4rren-dansukdfrang
       POOL_TOKEN: g4rren-sdffg
-      DATABASE_URL: postgresql://postgres:password@192.168.100.46:5432/postgres?schema=postgres
+      DATABASE_URL: postgresql://postgres:password@localhost:5432/postgres?schema=postgres
