--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,15 @@ services:
       - .:/src
     ports:
      - "3001:3001"
+    networks:
+      - my-network
     # comand: npm run start
     environment:
       PORT: 3001
       ACCESS_TOKEN: g4rren-dansukdfrang
       POOL_TOKEN: g4rren-sdffg
-      DATABASE_URL: postgresql://postgres:pulsar-db-ps@0.0.0.0:5432/postgres?schema=postgres
+      DATABASE_URL: postgresql://postgres:pulsar-db-ps@db:5432/postgres?schema=postgres
+
+networks:
+  my-network:
+    external: true
