--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=3001
 ACCESS_TOKEN=g4rren-dansukdfrang
 POOL_TOKEN=g4rren-sdffg
-DATABASE_URL="postgresql://postgres:pulsar-db-ps@0.0.0.0:5432/postgres?schema=postgres"
+# DATABASE_URL="postgresql://postgres:pulsar-db-ps@localhost:5432/postgres?schema=postgres"
+DATABASE_URL="postgresql://postgres:pulsar-db-ps@192.168.100.45:5432/postgres?schema=postgres"
