--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-PORT=3001
-ACCESS_TOKEN=g4rren-dansukdfrang
-POOL_TOKEN=g4rren-sdffg
-# DATABASE_URL="postgresql://postgres:pulsar-db-ps@localhost:5432/postgres?schema=postgres"
-DATABASE_URL="postgresql://postgres:pulsar-db-ps@192.168.100.45:5432/postgres?schema=postgres"
+PORT=3000
+HTTP_PORT=3001
+SECRET='PULSAR-GABRIEL-HENRIQUE'
+DATABASE_URL="file:./prisma/dev.db"
