fixing prisma generated

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,16 +10,17 @@ services:
       - .:/src
     ports:
      - "3001:3001"
-    networks:
-      - my-network
-    # comand: npm run start
-    environment:
-      PORT: 3001
-      ACCESS_TOKEN: g4rren-dansukdfrang
-      POOL_TOKEN: g4rren-sdffg
-      DATABASE_URL: postgresql://postgres:pulsar-db-ps@db:5432/postgres?schema=postgres
+     - "3002:3002"
+#     networks:
+#       - my-network
+#     # comand: npm run start
+#     environment:
+#       PORT: 3001
+#       ACCESS_TOKEN: g4rren-dansukdfrang
+#       POOL_TOKEN: g4rren-sdffg
+#       DATABASE_URL: postgresql://postgres:pulsar-db-ps@db:5432/postgres?schema=postgres
 
-networks:
-  my-network:
-    # external: true
-    driver: bridge
+# networks:
+#   my-network:
+#     # external: true
+#     driver: bridge
